--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,5 +3,6 @@
 <div>
     I'm not an artist, not a designer, not a musician, not a maker, and not a programmer.
     <br/> I eat rice, vegetables and fruits.
+    <br/> www.mina-vitamina.net
     <br/><br/><br/>
 </div>
