website added again

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -2,7 +2,7 @@
 
 <div>
     I'm not an artist, not a designer, not a musician, not a maker, and not a programmer.
-    <br/> I eat rice, vegetables and fruits.
-    <br/> www.mina-vitamina.net
+    <br/> I eat rice, vegetables and fruits.<br/>
+    <br/> visit my <a href="http://mina-vitamina.net/" target="blank">portfolio</a>
     <br/><br/><br/>
 </div>
