--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -10,7 +10,7 @@
                 <a href="{{ project.github }} "><i class="fa fa-fw fa-github"></i>GitHub</a>
                 {% endif %}
                 {% if project.website %}
-                <a href="{{ project.website }} "><i class="fa fa-fw fa-home"></i>Homepage</a>
+                <a href="{{ project.website }} "><i class="fa fa-fw fa-home"></i>site</a>
                 {% endif %}
 <br>
             </div>
