--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,9 @@
 
 <div class="cover-card table-cell table-middle">
   {% if author.avatar %}
-  <img src="{{ site.url }}/img/{{ author.avatar }}" alt="" class="avatar">
+  <a href="{{ site.url }}/">
+    <img src="{{ site.url }}/img/{{ author.avatar }}" alt="" class="avatar">
+  </a>
   {% endif %}
   <a href="{{ site.url }}/" class="author_name">{{ author.name }}</a>
   <span class="author_job">{{ author.job }}</span>
@@ -11,14 +13,10 @@
     <ul class="nav-list">
       <li class="nav-item">
         <a href="{{ site.url }}/">home</a>
-        <span>/</span>
       </li>
       {% for page in site.pages %} {% if page.title %}
       <li class="nav-item">
         <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>
-        {% unless forloop.last %}
-          <span>/</span>
-        {% endunless %}
       </li>
       {% endif %} {% endfor %}
     </ul>
