--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
   {% else %}
   "{{ site.url }}/img/{{ page.image.feature }}"
   {% endif %}
-  alt="{{ page.title }} feature image">
+  alt="{{ page.title | escape }} feature image">
 
   {% if page.image.credit %}
   <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
@@ -24,7 +24,7 @@ layout: default
 
 <div id="post">
   <header class="post-header">
-    <h1 title="{{ page.title }}">{{ page.title }}</h1>
+    <h1 title="{{ page.title | escape }}">{{ page.title }}</h1>
     <span class="post-meta">
       <span class="post-date">
         {{ page.date | date: "%-d %b %Y" | upcase }}
