--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,7 @@
     </div>
   </div>
   {% include js.html %}
+  <script src="/js/jquery.min.js"></script>
+{% include open-embed.html %}
 </body>
 </html>
