--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,6 +3,6 @@
 <div>
     I'm not an artist, designer, musician, maker, or programmer.
     <br/> I eat rice, vegetables and fruits.<br/>
-    <br/> visit my <a href="http://mina-vitamina.net/" target="blank">portfolio</a>
+    <br/> visit my <a href="https://mina-vitamina.net/" target="blank">portfolio</a>
     <br/><br/><br/>
 </div>
