--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,7 +1,7 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    I'm not an artist, designer, musician, maker, or programmer.
+    I'm an artist, reseracher and performer.
     <br/> I eat rice, vegetables and fruits.<br/>
     <br/> visit my <a href="https://mina-vitamina.net/" target="blank">portfolio</a>
     <br/><br/><br/>
